--- a/config/locales/account/es.yml
+++ b/config/locales/account/es.yml
@@ -19,12 +19,8 @@ es:
       ssn: Número de Seguro Social
       verification:
         instructions: Su cuenta requiere que un código secreto sea verificado.
-        reactivate_button: |2-
-
-          Ingrese el código que recibió por correo postal.
-        success: |2-
-
-          Su cuenta ha sido verificada.
+        reactivate_button: Ingrese el código que recibió por correo postal.
+        success: Su cuenta ha sido verificada.
         with_phone_button: Verifique con su teléfono.
     items:
       personal_key: Clave personal
@@ -32,7 +28,5 @@ es:
       regenerate_personal_key: Obtenga una clave nueva.
     security:
       link: Obtenga más información en el Centro de ayuda
-      text: |2-
-
-        Para su seguridad, la información de su perfil está bloqueada.
+      text: Para su seguridad, la información de su perfil está bloqueada.
     welcome: Bienvenido/a
