--- a/config/locales/devise/es.yml
+++ b/config/locales/devise/es.yml
@@ -105,9 +105,7 @@ es:
       header_text: Ingrese su código de seguridad
       invalid_otp: Ese código de seguridad no es válido. Puede intentar ingresarlo
         de nuevo o solicitar un nuevo código de seguridad de sólo un uso.
-      invalid_personal_key: |2-
-
-        Esa clave personal no es válida.
+      invalid_personal_key: Esa clave personal no es válida.
       max_generic_login_attempts_reached: Su cuenta está bloqueada temporalmente.
       max_otp_login_attempts_reached: Su cuenta ha sido bloqueada temporalmente porque
         ha ingresado incorrectamente el código de seguridad de sólo un uso demasiadas
@@ -147,6 +145,4 @@ es:
         aparece a continuación.
       two_factor_setup: Añada un número de teléfono
       user:
-        new_otp_sent: |2-
-
-          Le enviamos un nuevo código de sólo un uso
+        new_otp_sent: Le enviamos un nuevo código de sólo un uso
