--- a/config/locales/sign_up/es.yml
+++ b/config/locales/sign_up/es.yml
@@ -8,8 +8,9 @@ es:
       modal_header: "¿Está seguro de que desea cancelar?"
       success: Su cuenta ha sido eliminada. No guardamos su información.
       warning_header: Si cancela ahora
-      warning_points: '["No tendrá una cuenta de login.gov", "No guardaremos un registro
-        de su email, contraseña y número de teléfono", "No podrá acceder de forma
-        segura a su información a través de login.gov "]'
+      warning_points:
+      - No tendrá una cuenta de login.gov
+      - No guardaremos un registro de su email, contraseña y número de teléfono
+      - No podrá acceder de forma segura a su información a través de login.gov
     registrations:
       create_account: Crear una cuenta
