--- a/config/locales/notices/es.yml
+++ b/config/locales/notices/es.yml
@@ -2,8 +2,8 @@
 es:
   notices:
     account_reactivation: "¡Estupendo! Tiene su clave personal."
-    dap_html: "<!-- Participamos en el programa analítico del Gobierno de Estados
-      Unidos. --> <!-- Vea los datos en analytics.usa.gov (en inglés). -->"
+    dap_participation: Participamos en el programa analítico del Gobierno de Estados
+      Unidos. Vea los datos en analytics.usa.gov (en inglés).
     forgot_password:
       first_paragraph_end: con un enlace para restablecer su contraseña. Siga el enlace
         para continuar restableciendo su contraseña.
