Format phone number of record as a US number
**Why**: Only US numbers can be used as the phone number of record. This
commit changes the frontend JS so that the text fields only formats US
numbers and prevents the user from typing an international number.

Don't use intl number for init value in IdV form

**Why**: We don't allow the user to use an international number during
identity verification, so we should not populate the form with an
international number as the initial value

--- a/config/locales/errors/es.yml
+++ b/config/locales/errors/es.yml
@@ -18,6 +18,7 @@ es:
       format_mismatch: Por favor, use el formato solicitado.
       improbable_phone: NOT TRANSLATED YET
       missing_field: Por favor, rellene este campo.
+      must_have_us_country_code: NOT TRANSLATED YET
       no_password_reset_profile: Ningún perfil ha sido desactivado recientemente por
         un restablecimiento de contraseña.
       no_pending_profile: Ningún perfil está esperando verificación
