--- a/config/locales/errors/en.yml
+++ b/config/locales/errors/en.yml
@@ -19,6 +19,8 @@ en:
       improbable_phone: Invalid phone number. Please make sure you enter a valid phone
         number.
       missing_field: Please fill in this field.
+      must_have_us_country_code: Invalid phone number. Please make sure you enter
+        a phone number with a U.S. country code.
       no_password_reset_profile: No profile has been recently deactivated due to a
         password reset
       no_pending_profile: No profile is waiting for verification
