--- a/config/locales/errors/fr.yml
+++ b/config/locales/errors/fr.yml
@@ -21,6 +21,7 @@ fr:
       format_mismatch: Veuillez vous assurer de respecter le format requis.
       improbable_phone: NOT TRANSLATED YET
       missing_field: Veuillez remplir ce champ.
+      must_have_us_country_code: NOT TRANSLATED YET
       no_password_reset_profile: Aucun profil récemment désactivé en raison d'une
         réinitialisation de mot de passe
       no_pending_profile: Aucun profil en attente de vérification
