--- a/config/locales/idv/es.yml
+++ b/config/locales/idv/es.yml
@@ -10,6 +10,8 @@ es:
       mail:
         resend: Enviar otra carta
         send: Enviar una carta
+      return_to_account: NOT TRANSLATED YET
+      return_to_sp: NOT TRANSLATED YET
     cancel:
       modal_header: "¿Está seguro que desea cancelar?"
       warning_header: Si usted cancela ahora
@@ -101,6 +103,7 @@ es:
         información personal básica, así como su información financiera para completar
         este proceso. Si no tiene la información que necesitamos en este momento,
         puede continuar más tarde.
+      come_back_later: NOT TRANSLATED YET
       confirm: Usted ha encriptado sus datos verificados.
       dupe_ssn1: Si recibe este error, es posible que ya haya creado y verificado
         una cuenta, pero con un email diferente.
@@ -196,6 +199,7 @@ es:
     titles:
       activated: Su identidad ha sido verificada.
       cancel: No podemos verificar su identidad.
+      come_back_later: NOT TRANSLATED YET
       complete: Verificación de identidad completa
       dupe: 'Error: Una cuenta puede que ya exista.'
       expectations: A continuación, ayúdenos a identificarlo.
