--- a/config/locales/idv/fr.yml
+++ b/config/locales/idv/fr.yml
@@ -5,25 +5,27 @@ fr:
       activate_by_mail: Activer par la poste
       activate_by_phone: Activer par téléphone
       cancel: Annuler et retourner à votre profil
-      continue: Continuer la vérification d'identité
+      continue: Continuez à vérifier votre compte
       continue_plain: Continuer
       mail:
         resend: Envoyer une autre lettre
         send: Envoyer une lettre
       return_to_account: NOT TRANSLATED YET
       return_to_sp: NOT TRANSLATED YET
+      return_to_verify: "‹ Revenez à toutes les options pour prouver mon identité"
       send_confirmation_code: NOT TRANSLATED YET
     cancel:
       modal_header: Souhaitez-vous vraiment annuler?
       warning_header: Si vous annulez maintenant
+      warning_qualifier: peut-être pas
+      warning_point: Login.gov ne pourra pas vérifier votre identité et vous ne pourrez
+        %{warning_qualifier} accéder à vos informations au %{sp_name}.
+      warning_point_no_sp: Login.gov ne pourra pas vérifier votre identité et vous
+        ne pourrez %{warning_qualifier} accéder à vos informations.
       warning_points:
-      - Nous ne serons pas en mesure de vérifier votre identité
-      - Nous ne conserverons pas de dossier contenant votre nom, adresse, date de
-        naissance ou numéro de sécurité sociale
-      - Vous ne pourrez pas accéder à votre information de manière sécuritaire en
-        utilisant login.gov
-      - Vous conserverez un compte login.gov pour votre adresse courriel
-      - Vous pouvez gérer ce compte sur la page de votre profil
+      - Login.gov ne tiendra pas un registre de votre nom, adresse, date de naissance
+        ou numéro de Sécurité Sociale.
+      - Vous aurez toujours un compte login.gov.
     errors:
       bad_dob: Votre date de naissance doit être une date valide.
       duplicate_ssn: Un compte existe déjà avec l'information que vous avez fournie.
@@ -43,7 +45,8 @@ fr:
           ###-##-####'
         zipcode: 'Votre code ZIP doit être inscrit de cette façon : #####-####'
     form:
-      activate_by_mail: Activer mon compte par la poste.
+      activate_by_mail: Obtenez un code par lettre.
+      activate_by_phone: Vérifiez votre adresse par téléphone.
       address1: Adresse 1
       address2: Adresse 2 (optional)
       auto_loan: Numéro du prêt automobile
@@ -65,7 +68,6 @@ fr:
       select_financial_account: Sélectionnez un compte bancaire…
       ssn_label_html: Numéro de sécurité sociale %{tooltip}
       state: État
-      use_ccn: Fournissez un numéro de carte de crédit
       use_financial_account: Vous n'avez pas de carte de crédit?
       zipcode: Code ZIP
     index:
@@ -116,9 +118,11 @@ fr:
         originalement.
       dupe_ssn2_link: déconnectez-vous puis connectez-vous à nouveau
       finance:
-        disclaimer: En continuant, vous acceptez que %{app_name} compare l'information
-          du compte que vous avez fournie avec des sources tiers afin de vérifier
-          votre identité.
+        disclaimer_qualifier: ne
+        disclaimer: En continuant, vous acceptez de permettre à login.gov de comparer
+          les informations de compte que vous fournissez avec des sources tierces
+          de confiance afin de vérifier votre identité. Nous %{disclaimer_qualifier}
+          vous facturerons jamais.
         hint: Vous pouvez utiliser Mastercard, Visa, Diner's Club, ou JCB.
         intro_account: Aidez-nous à vérifier votre identité en fournissant le numéro
           de votre prêt automobile, de votre prêt hypothécaire, ou de votre crédit
@@ -137,7 +141,7 @@ fr:
       loading: NOT TRANSLATED YET
       mail_sent: Votre lettre est en route
       otp_delivery_method:
-        phone_number_html: NOT TRANSLATED YET
+        phone_number_html: Nous enverrons un code à <strong>%{phone}</strong>
       personal_details_verified: Information personnelle vérifiée!
       personal_key: Il s'agit de votre nouvelle clé personnelle. Notez-la et conservez-la
         dans un endroit sécuritaire. Vous en aurez besoin si vous perdez votre mot
@@ -225,8 +229,8 @@ fr:
       intro: Aidez-nous à vous identifier
       mail:
         resend: Vous voulez une autre lettre?
-        verify: Vous voulez une lettre?
-      otp_delivery_method: NOT TRANSLATED YET
+        verify: Vérifiez votre adresse par lettre
+      otp_delivery_method: Obtenir un code par téléphone
       phone: Numéro de téléphone enregistré
       review: Réviser et soumettre
       select_verification: Activer votre compte
