--- a/config/locales/headings/en.yml
+++ b/config/locales/headings/en.yml
@@ -23,7 +23,7 @@ en:
       forgot: Forgot your password?
     personal_key: Here is your personal key
     registrations:
-      enter_email: Start creating an account
+      enter_email: Choose an email address
     session_timeout_warning: Need more time?
     sign_in_with_sp: Sign in to continue to %{sp}
     sign_in_without_sp: Sign in
