--- a/config/locales/sign_up/es.yml
+++ b/config/locales/sign_up/es.yml
@@ -3,14 +3,18 @@ es:
   sign_up:
     buttons:
       cancel: Cancelar y borrar su información
-      continue: Continuar la creación de cuenta
+      continue: Continuar creando una cuenta
     cancel:
       modal_header: "¿Está seguro de que desea cancelar?"
       success: Su cuenta ha sido eliminada. No guardamos su información.
       warning_header: Si cancela ahora
+      warning_qualifier: Es posible que no pueda
+      warning_point: "%{warning_qualifier} acceder a su información en %{sp_name}
+        en línea."
+      warning_point_no_sp: "%{warning_qualifier} acceder a su información en línea."
       warning_points:
-      - No tendrá una cuenta de login.gov
-      - No guardaremos un registro de su email, contraseña y número de teléfono
-      - No podrá acceder de forma segura a su información a través de login.gov
+      - No tendrá una cuenta de login.gov.
+      - Login.gov no almacenará su dirección de correo electrónico, contraseña y número
+        de teléfono.
     registrations:
       create_account: Crear una cuenta
