Allow OTP delivery method selection during IdV
**Why**: Prior to this commit, the OTP delivery method was the user's
preference for their 2FA phone. The users phone number of record may not
have the same capabilities as the user's 2FA phone. This commit allows
the user to select a delivery method that is different than their 2FA
OTP delivery method.

Add context awareness to OTP selection form

**Why**: We don't want the OTP delivery selection form to update the
user's OTP delivery method preference in the IdV context since that is a
one-time thing. This has the additional benefit of letting us refactor
controllers so they can use the analytics params directly from the form
instead of having to merge in the context.

Add delivery method arg to phone confirmation

**Why**: On screens where the user selects a delivery method that may
not correspond to their delivery preference (e.g. IdV phone
confirmation), then we want to convey their delivery preference to the
`prommpt_to_confirm` method so that it can use that delivery method if
it is available.

Disable voice OTP in IdV when it's unsupported

**Why**: If the user enters a phone that we can't voice call, we want to
disable the option to make it clear that it is unavailable.

--- a/config/locales/idv/en.yml
+++ b/config/locales/idv/en.yml
@@ -12,6 +12,7 @@ en:
         send: Send a letter
       return_to_account: Return to account
       return_to_sp: Return to %{sp}
+      send_confirmation_code: Send confirmation code
     cancel:
       modal_header: Are you sure you want to cancel?
       warning_header: If you cancel now
@@ -126,6 +127,8 @@ en:
       help_center: Visit our Help Center to learn more about verifying your account.
       loading: Verifying your identity
       mail_sent: Your letter is on its way
+      otp_delivery_method:
+        phone_number_html: We will send a code to <strong>%{phone}</strong>
       personal_details_verified: Personal details verified!
       personal_key: This is your new personal key. Write it down and keep it in a
         safe place. You will need it if you ever lose your password.
@@ -205,6 +208,7 @@ en:
       mail:
         resend: Want another letter?
         verify: Want a letter?
+      otp_delivery_method: Get a code by phone
       phone: Phone number of record
       review: Review and submit
       select_verification: Activate your account
