Update French translations

--- a/config/locales/devise/fr.yml
+++ b/config/locales/devise/fr.yml
@@ -114,7 +114,8 @@ fr:
       max_otp_login_attempts_reached: Votre compte est temporairement verrouillé,
         car vous avez entré le code de sécurité à utilisation unique de façon erronée
         à de trop nombreuses reprises.
-      max_otp_requests_reached: NOT TRANSLATED YET
+      max_otp_requests_reached: Votre compte est temporairement verrouillé car vous avez
+        demandé un code de sécurité à trop de reprises.
       max_personal_key_login_attempts_reached: Votre compte est temporairement verrouillé,
         car vous avez entré le code de sécurité à utilisation unique de façon erronée
         à de trop nombreuses reprises.
